--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-index
+<!DOCTYPE html>
+<html>
+ <head>
+
+ <title> Lyon and it's buildings</title>
+ <meta charset="utf-8">
+ </head>
+ 
+ <body>
+ <h1>Summary</h1>
+ <h2> 3 buildings of Lyon </h2>
+ 
+ <a href="Lecrayon.html"> Lecrayon</a>
+ <a href="fourviere.html"> fourviere</a>
+ <a href="confluencemuseum.html"> confluencemuseum</a>
+ 
+ 
+ <p>On this website, i'm gonna show 3 of the most well known buildings of Lyon, my birthplace.<p>
+ </body>
+</html>
